--- a/objectives-tile.html
+++ b/objectives-tile.html
@@ -31,6 +31,7 @@ tile with key metrics
         height:70%;
       }
       thead tr th {
+        font-weight: normal;
         border-bottom: 1px solid grey;
         border-collapse: separate;
         border-spacing: 5px 5px;
