functional-central-tile styling

--- a/key-metrics-tile.html
+++ b/key-metrics-tile.html
@@ -59,7 +59,7 @@ tile with key metrics
         width: 80%;
       }
       .headerContainer {
-        height: 10%
+        height: 10%;
         @apply(--layout-horizontal);
         @apply(--layout-justified);
       }
