--- a/functional-central-tile.html
+++ b/functional-central-tile.html
@@ -18,8 +18,6 @@ tile with functional and central departments info's
       }
       .horizontal {
         @apply(--layout-horizontal);
-        @apply(--layout-around-justified);
-
       }
       table {
         border: 0;
@@ -27,12 +25,21 @@ tile with functional and central departments info's
         border-spacing: 0 5px;
         text-align: left;
         width:100%;
-        height:100%;
+        height:85%;
       }
       thead tr th {
+        font-weight: normal;
         border-bottom: 1px solid grey;
         border-collapse: separate;
         border-spacing: 5px 5px;
+      }
+      .headerContainer {
+        height: 10%;
+        @apply(--layout-horizontal);
+        @apply(--layout-justified);
+      }
+      .alignRight {
+        @apply(--layout-self-stretch);
       }
     </style>
     <iron-ajax id="ajax"
@@ -41,11 +48,24 @@ tile with functional and central departments info's
       on-response="handleResponse"
       on-error="handleError">
     </iron-ajax>
-    <div class="horizontal">
-      <h3 class="caption">Zentralbereiche</h3>
-      <h3 class="caption">Funktionsbereiche</h3>
+    <div class="headerContainer">
+      <div style="width: 100%;" class="horizontal">
+        <h3 class="caption" style="width: 50%;">Zentralbereiche</h3>
+        <h3 class="caption">Funktionsbereiche</h3>
+      </div>
+      <div class="alignRight">
+        <iron-icon class="alignRight" icon="icons:zoom-in"></iron-icon>
+      </div>
     </div>
     <table>
+      <colgroup>
+         <col span="1" style="width: 26%;">
+         <col span="1" style="width: 12%;">
+         <col span="1" style="width: 12%;">
+         <col span="1" style="width: 26%;">
+         <col span="1" style="width: 12%;">
+         <col span="1" style="width: 12%;">
+      </colgroup>
       <thead>
         <tr>
           <th>Vergangene 5 Perioden</th>
