--- a/shared-tile-styles.html
+++ b/shared-tile-styles.html
@@ -17,6 +17,14 @@
         --paper-progress-container-color: #3367d6;
         --paper-progress-active-color: #7baaf7;
       }
+      .headerContainer {
+        height: 10%;
+        @apply(--layout-horizontal);
+        @apply(--layout-justified);
+      }
+      .alignRight {
+        @apply(--layout-self-stretch);
+      }
     </style>
   </template>
 </dom-module>
