added missing index

--- a/department-tile.html
+++ b/department-tile.html
@@ -188,7 +188,7 @@ tile with department info's
         return barData;
       },
       _actualValue: function(array) {
-        return array[array.length-1];
+        return array[array.length-1][1];
       }
     });
   </script>
