--- a/functional-central-tile.html
+++ b/functional-central-tile.html
@@ -205,7 +205,7 @@ tile with functional and central departments info's
         return sparkData;
       },
       _actualValue: function(array) {
-        return array[array.length-1];
+        return array[array.length-1][1];
       }
     });
   </script>
