--- a/key-metrics-tile.html
+++ b/key-metrics-tile.html
@@ -232,7 +232,7 @@ tile with key metrics
         return sparkData;
       },
       _actualValue: function(array) {
-        return array[array.length-1];
+        return array[array.length-1][1];
       }
     });
   </script>
