--- a/key-metrics-tile.html
+++ b/key-metrics-tile.html
@@ -1,7 +1,6 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../google-chart/google-chart.html">
 <link rel="import" href="../iron-ajax/iron-ajax.html">
-<link rel="import" href="../paper-progress/paper-progress.html">
 <link rel="import" href="../iron-icon/iron-icon.html">
 <link rel="import" href="../iron-icons/iron-icons.html">
 <link rel="import" href="./shared-tile-styles.html">
@@ -147,7 +146,7 @@ tile with key metrics
               <growth-bar value="-18" min="-25" max="25"></growth-bar>
             </div>
           </td>
-          <td>[[_actualValue(occupancyRate)]] €</td>
+          <td>[[_actualValue(occupancyRate)]] %</td>
         </tr>
         <tr>
           <td>
@@ -163,7 +162,7 @@ tile with key metrics
               <growth-bar value="-18" min="-25" max="25"></growth-bar>
             </div>
           </td>
-          <td>[[_actualValue(quality)]] €</td>
+          <td>[[_actualValue(quality)]]</td>
         </tr>
         <tr class="scaleRow">
           <td></td>
