--- a/objectives-tile.html
+++ b/objectives-tile.html
@@ -5,6 +5,7 @@
 <link rel="import" href="../iron-icon/iron-icon.html">
 <link rel="import" href="../iron-icons/iron-icons.html">
 <link rel="import" href="../paper-tooltip/paper-tooltip.html">
+<link rel="import" href="./objective-progress.html">
 <!--
 `key-metrics-tile`
 tile with key metrics
@@ -37,40 +38,10 @@ tile with key metrics
         border-collapse: separate;
         border-spacing: 5px 5px;
       }
-      .knob {
-        position: absolute;
-        top: 50%;
-        margin-top: -5px;
-        margin-left: -2px;
-        left: 70%;
-        background-color: #152c5c;
-        width: 4px;
-        height: 10px;
-        z-index: 2;
-        -webkit-transition: width height 2s;
-        transition: width height 2s;
-      }
-      .knob:hover {
-          width: 6px;
-          height: 14px;
-          margin-top: -7px;
-      }
-      .progress {
-        width: 100%;
-        --paper-progress-container-color: #7baaf7;
-        --paper-progress-active-color: #3367d6;
-      }
       .legend {
         display: inline-block;
         width: 5px;
         height: 12px;
-      }
-      .progressContainer {
-        position: relative;
-        width: 80%;
-      }
-      paper-tooltip {
-        --paper-tooltip-opacity: 1.0;
       }
     </style>
     <iron-ajax id="ajax"
@@ -119,17 +90,12 @@ tile with key metrics
           </td>
           <td>[[objective1.name]]</td>
           <td>
-            <div class="progressContainer">
-              <div id="knob1" class="knob"></div>
-              <paper-progress id="progress1" class="progress" value="70"></paper-progress>
-            </div>
-            <paper-tooltip for="progress1" offset="0">[[_actualValue(objective1.pastPeriods)]]</paper-tooltip>
-            <paper-tooltip for="knob1" offset="0">
-              <div>Best Team: Unknown ([[objective1.bestPlayer]])</div>
-            </paper-tooltip>
+            <objective-progress best-team-value="[[objective1.bestTeamValue]]"
+              actual-value="[[_actualValue(objective1.pastPeriods)]]"
+              best-team-name="[[objective1.bestTeamName]]"></objective-progress>
           </td>
           <td>
-            [[_actualValue(objective1.pastPeriods)]]
+            [[_actualValue(objective1.pastPeriods)]] [[objective1.unit]]
           </td>
         </tr>
         <tr>
@@ -142,17 +108,12 @@ tile with key metrics
           </td>
           <td>[[objective2.name]]</td>
           <td>
-            <div class="progressContainer">
-              <div id="knob2" class="knob"></div>
-              <paper-progress id="progressContainer2" class="progress" value="70"></paper-progress>
-            </div>
-            <paper-tooltip for="progressContainer2" offset="0">[[_actualValue(objective2.pastPeriods)]]</paper-tooltip>
-            <paper-tooltip for="knob2" offset="0">
-              <div>Best Team: Unknown ([[objective2.bestPlayer]])</div>
-            </paper-tooltip>
+            <objective-progress best-team-value="[[objective2.bestTeamValue]]"
+              actual-value="[[_actualValue(objective2.pastPeriods)]]"
+              best-team-name="[[objective2.bestTeamName]]"></objective-progress>
           </td>
           <td>
-            [[_actualValue(objective2.pastPeriods)]]
+            [[_actualValue(objective2.pastPeriods)]] [[objective2.unit]]
           </td>
         </tr>
         <tr>
@@ -165,17 +126,12 @@ tile with key metrics
           </td>
           <td>[[objective3.name]]</td>
           <td>
-            <div class="progressContainer">
-              <div id="knob3" class="knob"></div>
-              <paper-progress id="progressContainer3" class="progress" value="70"></paper-progress>
-            </div>
-            <paper-tooltip for="progressContainer3" offset="0">[[_actualValue(objective3.pastPeriods)]]</paper-tooltip>
-            <paper-tooltip for="knob3" offset="0">
-              <div>Best Team: Unknown ([[objective2.bestPlayer]])</div>
-            </paper-tooltip>
+            <objective-progress best-team-value="[[objective3.bestTeamValue]]"
+              actual-value="[[_actualValue(objective3.pastPeriods)]]"
+              best-team-name="[[objective3.bestTeamName]]"></objective-progress>
           </td>
           <td>
-            [[_actualValue(objective3.pastPeriods)]]
+            [[_actualValue(objective3.pastPeriods)]] [[objective3.unit]]
           </td>
         </tr>
       </tbody>
@@ -224,7 +180,14 @@ tile with key metrics
       _getObjective: function(objData) {
         var objective = {name: objData.name};
         objective.pastPeriods = this._buildDataForSpark(objData.pastPeriods);
-        objective.bestPlayer = objData.bestPlayer;
+        if(objData.bestTeam != null) {
+          objective.bestTeamName = objData.bestTeam.name;
+          objective.bestTeamValue = objData.bestTeam.withValue;
+        } else {
+          objective.bestTeamName = null;
+          objective.bestTeamValue = null;
+        }
+        objective.unit = this._getUnit(objData.objectiveKey);
         return objective;
       },
       _buildDataForSpark: function(arrayWithData) {
@@ -236,6 +199,24 @@ tile with key metrics
       },
       _actualValue: function(array) {
         return array[array.length-1][1];
+      },
+      _getUnit: function(objectiveKey) {
+        switch(objectiveKey) {
+          case 'highOverPlus':
+          case 'lowCostPerCase':
+          case 'exactCostCoverage':
+            return '€';
+          case 'highOccupancyLevel':
+          case 'lowGradeOfDismissals':
+          case 'highSpecialisationLevel':
+            return '%';
+          case 'lowLengthOfStay':
+          case 'lowWasteOfBeds':
+          case 'reasonableEmergencyCapacity':
+          case 'highTotalQuality':
+          default:
+            return '';
+          }
       }
     });
   </script>
