--- a/department-tile.html
+++ b/department-tile.html
@@ -44,6 +44,13 @@ tile with department info's
         margin-top: -15px;
         margin-bottom: -15px
       }
+      #noDataDiv {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
     </style>
     <iron-ajax id="ajax"
       auto
@@ -51,82 +58,87 @@ tile with department info's
       on-response="handleResponse"
       on-error="handleError">
     </iron-ajax>
-    <div class="headerContainer">
-      <h3 class="caption">[[name]]</h3>
-      <div class="alignRight">
-        <iron-icon class="alignRight" icon="icons:zoom-in"></iron-icon>
-      </div>
+    <div id="noDataDiv" hidden$="{{dataAvailable}}">
+      <div>No Data Available</div>
     </div>
-    <table>
-      <colgroup>
-         <col span="1" style="width: 40%;">
-         <col span="1" style="width: 60%;">
-      </colgroup>
-      <thead>
-        <tr>
-          <th>Aktuelle Informationen</th>
-          <th>Gewinner der Leistungen</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>
-            <div style="height: 10px; font-size:90%;">Deckungsbeitrag: [[_actualValue(contributionMargin)]] €</div>
-          </td>
-          <td rowspan="6">
-            <div>
-              <google-chart type="bar" style="width: 100%; height: 100%;"
-                data='[[profitPerDrg]]'
-                options='{"backgroundColor": "#EEEEEE", "legend": {"position": "none"}, "hAxis": {"format": "#€"}}'>
-              </google-chart>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <div class="sparkContainer">
-              <google-chart class="spark"
-                type="line"
-                data="[[contributionMargin]]"
-                options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
-              </google-chart>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <div style="height: 10px; font-size:90%;">Belgungsgrad: [[_actualValue(occupancyRate)]] %</div>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <div class="sparkContainer">
-              <google-chart class="spark"
-                type="line"
-                data='[[occupancyRate]]'
-                options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
-              </google-chart>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <div style="height: 10px; font-size:90%;">Qualität: [[_actualValue(quality)]]</div>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <div class="sparkContainer">
-              <google-chart class="spark"
-                type="line"
-                data='[[quality]]'
-                options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
-              </google-chart>
-            </div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <div style="width: 100%; height: 100%;" hidden$="{{!dataAvailable}}">
+      <div class="headerContainer">
+        <h3 class="caption">[[name]]</h3>
+        <div class="alignRight">
+          <iron-icon class="alignRight" icon="icons:zoom-in"></iron-icon>
+        </div>
+      </div>
+      <table>
+        <colgroup>
+           <col span="1" style="width: 40%;">
+           <col span="1" style="width: 60%;">
+        </colgroup>
+        <thead>
+          <tr>
+            <th>Aktuelle Informationen</th>
+            <th>Gewinner der Leistungen</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <div style="height: 10px; font-size:90%;">Deckungsbeitrag: [[_actualValue(contributionMargin)]] €</div>
+            </td>
+            <td rowspan="6">
+              <div>
+                <google-chart type="bar" style="width: 100%; height: 100%;"
+                  data='[[profitPerDrg]]'
+                  options='{"backgroundColor": "#EEEEEE", "legend": {"position": "none"}, "hAxis": {"format": "#€"}}'>
+                </google-chart>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div class="sparkContainer">
+                <google-chart class="spark"
+                  type="line"
+                  data="[[contributionMargin]]"
+                  options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
+                </google-chart>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div style="height: 10px; font-size:90%;">Belgungsgrad: [[_actualValue(occupancyRate)]] %</div>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div class="sparkContainer">
+                <google-chart class="spark"
+                  type="line"
+                  data='[[occupancyRate]]'
+                  options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
+                </google-chart>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div style="height: 10px; font-size:90%;">Qualität: [[_actualValue(quality)]]</div>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div class="sparkContainer">
+                <google-chart class="spark"
+                  type="line"
+                  data='[[quality]]'
+                  options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
+                </google-chart>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </template>
 
   <script>
@@ -148,6 +160,10 @@ tile with department info's
         },
         profitPerDrg: {
           type: Array
+        },
+        dataAvailable: {
+          type: Boolean,
+          value: false
         }
       },
       ready: function() {
@@ -159,9 +175,11 @@ tile with department info's
       },
       handleResponse: function(e) {
         this._processData(e.detail.response);
+        this.dataAvailable = true;
       },
       handleError: function() {
         console.warn("No Data");
+        this.dataAvailable = false;
       },
       _processData: function(depData) {
         this.name = depData.name;
