--- a/info-tile.html
+++ b/info-tile.html
@@ -31,6 +31,13 @@ tile with infos from gamemaster
       .infoContainer {
         margin: 5%;
       }
+      #noDataDiv {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
     </style>
     <iron-ajax id="ajax"
       auto
@@ -38,29 +45,34 @@ tile with infos from gamemaster
       on-response="handleResponse"
       on-error="handleError">
     </iron-ajax>
-    <table>
-      <thead>
-        <tr>
-          <th>
-            <div class="headerContainer">
-              <h3 class="caption">Aktuelle Informationen</h3>
-              <div class="alignRight">
-                <iron-icon class="alignRight" icon="icons:zoom-in"></iron-icon>
+    <div id="noDataDiv" hidden$="{{dataAvailable}}">
+      <div>No Data Available</div>
+    </div>
+    <div style="width: 100%; height: 100%;" hidden$="{{!dataAvailable}}">
+      <table>
+        <thead>
+          <tr>
+            <th>
+              <div class="headerContainer">
+                <h3 class="caption">Aktuelle Informationen</h3>
+                <div class="alignRight">
+                  <iron-icon class="alignRight" icon="icons:zoom-in"></iron-icon>
+                </div>
               </div>
-            </div>
-          </th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>
-            <div class="infoContainer">
-              [[info]]
-            </div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <div class="infoContainer">
+                [[info]]
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </template>
 
   <script>
@@ -73,6 +85,10 @@ tile with infos from gamemaster
         info: {
           type: String,
           value: ""
+        },
+        dataAvailable: {
+          type: Boolean,
+          value: false
         }
       },
       ready: function() {
@@ -84,9 +100,11 @@ tile with infos from gamemaster
       },
       handleResponse: function(e) {
         this.info = e.detail.response.info;
+        this.dataAvailable = true;
       },
       handleError: function() {
         console.warn("No Data");
+        this.dataAvailable = false;
       }
     });
   </script>
