--- a/key-metrics-tile.html
+++ b/key-metrics-tile.html
@@ -57,6 +57,13 @@ tile with key metrics
       .growthBar {
         width: 80%;
       }
+      #noDataDiv {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
     </style>
     <iron-ajax id="ajax"
       auto
@@ -64,120 +71,125 @@ tile with key metrics
       on-response="handleResponse"
       on-error="handleError">
     </iron-ajax>
-    <div class="headerContainer">
-      <h3 class="caption">Key Metriken</h3>
-      <iron-icon class="alignRight" icon="icons:zoom-in"></iron-icon>
+    <div id="noDataDiv" hidden$="{{dataAvailable}}">
+      <div>No Data Available</div>
     </div>
-    <table>
-      <colgroup>
-         <col span="1" style="width: 30%;">
-         <col span="1" style="width: 25%;">
-         <col span="1" style="width: 30%;">
-         <col span="1" style="width: 15%;">
-      </colgroup>
-      <thead>
-        <tr>
-          <th>Vergangene 5 Perioden</th>
-          <th>Metrik</th>
-          <th>Wachstum in Prozent</th>
-          <th>Aktuell</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>
-            <google-chart class="spark"
-              type="line"
-              data="[[contributionMargin]]"
-              options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
-            </google-chart>
-          </td>
-          <td>Deckungsbeiträge</td>
-          <td>
-            <div class="growthBar">
-              <growth-bar value="-18" min="-25" max="25"></growth-bar>
-            </div>
-          </td>
-          <td>[[_actualValue(contributionMargin)]] €</td>
-        </tr>
-        <tr>
-          <td>
-            <google-chart class="spark"
-              type="line"
-              data="[[centralAndFunctionalCosts]]"
-              options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
-            </google-chart>
-          </td>
-          <td>Kosten Zentral- und Funktionsbereiche</td>
-          <td>
-            <div class="growthBar">
-              <growth-bar value="-18" min="-25" max="25"></growth-bar>
-            </div>
-          </td>
-          <td>[[_actualValue(centralAndFunctionalCosts)]] €</td>
-        </tr>
-        <tr>
-          <td>
-            <google-chart class="spark"
-              type="line"
-              data="[[overplus]]"
-              options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
-            </google-chart>
-          </td>
-          <td>Überschuss</td>
-          <td>
-            <div class="growthBar">
-              <growth-bar value="-18" min="-25" max="25"></growth-bar>
-            </div>
-          </td>
-          <td>[[_actualValue(overplus)]] €</td>
-        </tr>
-        <tr>
-          <td>
-            <google-chart class="spark"
-              type="line"
-              data="[[occupancyRate]]"
-              options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
-            </google-chart>
-          </td>
-          <td>Belegungsgrad</td>
-          <td>
-            <div class="growthBar">
-              <growth-bar value="-18" min="-25" max="25"></growth-bar>
-            </div>
-          </td>
-          <td>[[_actualValue(occupancyRate)]] %</td>
-        </tr>
-        <tr>
-          <td>
-            <google-chart class="spark"
-              type="line"
-              data="[[quality]]"
-              options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
-            </google-chart>
-          </td>
-          <td>Gesamtqualität</td>
-          <td>
-            <div class="growthBar">
-              <growth-bar value="-18" min="-25" max="25"></growth-bar>
-            </div>
-          </td>
-          <td>[[_actualValue(quality)]]</td>
-        </tr>
-        <tr class="scaleRow">
-          <td></td>
-          <td></td>
-          <td>
-            <div class="scaleContainer growthBar" style="font-size: 75%;">
-              <div>-25%</div>
-              <div>0%</div>
-              <div>25%</div>
-            </div>
-          </td>
-          <td></td>
-        </tr>
-      </tbody>
-    </table>
+    <div style="width: 100%; height: 100%;" hidden$="{{!dataAvailable}}">
+      <div class="headerContainer">
+        <h3 class="caption">Key Metriken</h3>
+        <iron-icon class="alignRight" icon="icons:zoom-in"></iron-icon>
+      </div>
+      <table>
+        <colgroup>
+           <col span="1" style="width: 30%;">
+           <col span="1" style="width: 25%;">
+           <col span="1" style="width: 30%;">
+           <col span="1" style="width: 15%;">
+        </colgroup>
+        <thead>
+          <tr>
+            <th>Vergangene 5 Perioden</th>
+            <th>Metrik</th>
+            <th>Wachstum in Prozent</th>
+            <th>Aktuell</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <google-chart class="spark"
+                type="line"
+                data="[[contributionMargin]]"
+                options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
+              </google-chart>
+            </td>
+            <td>Deckungsbeiträge</td>
+            <td>
+              <div class="growthBar">
+                <growth-bar value="-18" min="-25" max="25"></growth-bar>
+              </div>
+            </td>
+            <td>[[_actualValue(contributionMargin)]] €</td>
+          </tr>
+          <tr>
+            <td>
+              <google-chart class="spark"
+                type="line"
+                data="[[centralAndFunctionalCosts]]"
+                options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
+              </google-chart>
+            </td>
+            <td>Kosten Zentral- und Funktionsbereiche</td>
+            <td>
+              <div class="growthBar">
+                <growth-bar value="-18" min="-25" max="25"></growth-bar>
+              </div>
+            </td>
+            <td>[[_actualValue(centralAndFunctionalCosts)]] €</td>
+          </tr>
+          <tr>
+            <td>
+              <google-chart class="spark"
+                type="line"
+                data="[[overplus]]"
+                options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
+              </google-chart>
+            </td>
+            <td>Überschuss</td>
+            <td>
+              <div class="growthBar">
+                <growth-bar value="-18" min="-25" max="25"></growth-bar>
+              </div>
+            </td>
+            <td>[[_actualValue(overplus)]] €</td>
+          </tr>
+          <tr>
+            <td>
+              <google-chart class="spark"
+                type="line"
+                data="[[occupancyRate]]"
+                options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
+              </google-chart>
+            </td>
+            <td>Belegungsgrad</td>
+            <td>
+              <div class="growthBar">
+                <growth-bar value="-18" min="-25" max="25"></growth-bar>
+              </div>
+            </td>
+            <td>[[_actualValue(occupancyRate)]] %</td>
+          </tr>
+          <tr>
+            <td>
+              <google-chart class="spark"
+                type="line"
+                data="[[quality]]"
+                options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
+              </google-chart>
+            </td>
+            <td>Gesamtqualität</td>
+            <td>
+              <div class="growthBar">
+                <growth-bar value="-18" min="-25" max="25"></growth-bar>
+              </div>
+            </td>
+            <td>[[_actualValue(quality)]]</td>
+          </tr>
+          <tr class="scaleRow">
+            <td></td>
+            <td></td>
+            <td>
+              <div class="scaleContainer growthBar" style="font-size: 75%;">
+                <div>-25%</div>
+                <div>0%</div>
+                <div>25%</div>
+              </div>
+            </td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </template>
 
   <script>
@@ -201,6 +213,10 @@ tile with key metrics
         },
         quality: {
           type: Array
+        },
+        dataAvailable: {
+          type: Boolean,
+          value: false
         }
       },
       ready: function() {
@@ -212,9 +228,11 @@ tile with key metrics
       },
       handleResponse: function(e) {
         this._processData(e.detail.response);
+        this.dataAvailable = true;
       },
       handleError: function() {
         console.warn("No Data");
+        this.dataAvailable = false;
       },
       _processData: function(keyMetricData) {
         this.contributionMargin = this._buildDataForSpark(keyMetricData.contributionMargin);
