--- a/objectives-tile.html
+++ b/objectives-tile.html
@@ -43,6 +43,13 @@ tile with key metrics
         width: 5px;
         height: 12px;
       }
+      #noDataDiv {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
     </style>
     <iron-ajax id="ajax"
       auto
@@ -50,92 +57,97 @@ tile with key metrics
       on-response="handleResponse"
       on-error="handleError">
     </iron-ajax>
-    <div class="headerContainer">
-      <h3 class="caption">Ziele</h3>
-      <div class="alignRight">
-        <span>
-          (
-          <div class="legend" style="background-color: #3367d6;"></div>
-          Aktuell;
-          <div class="legend" style="background-color: #152c5c;"></div>
-          Bester Mitspieler;)
-        </span>
-        <iron-icon class="alignRight" icon="icons:zoom-in"></iron-icon>
-      </div>
+    <div id="noDataDiv" hidden$="{{dataAvailable}}">
+      <div>No Data Available</div>
     </div>
-    <h3>Gesamtplatzierung: [[ranking]]</h3>
-    <table>
-      <colgroup>
-         <col span="1" style="width: 30%;">
-         <col span="1" style="width: 25%;">
-         <col span="1" style="width: 30%;">
-         <col span="1" style="width: 15%;">
-      </colgroup>
-      <thead>
-        <tr>
-          <th>Vergangene 5 Perioden</th>
-          <th>Ziel</th>
-          <th>Fortschritt</th>
-          <th>Aktuell</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>
-            <google-chart class="spark"
-              type="line"
-              data="[[objective1.pastPeriods]]"
-              options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
-            </google-chart>
-          </td>
-          <td>[[objective1.name]]</td>
-          <td>
-            <objective-progress best-team-value="[[objective1.bestTeamValue]]"
-              actual-value="[[_actualValue(objective1.pastPeriods)]]"
-              best-team-name="[[objective1.bestTeamName]]"></objective-progress>
-          </td>
-          <td>
-            [[_actualValue(objective1.pastPeriods)]] [[objective1.unit]]
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <google-chart class="spark"
-              type="line"
-              data="[[objective2.pastPeriods]]"
-              options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
-            </google-chart>
-          </td>
-          <td>[[objective2.name]]</td>
-          <td>
-            <objective-progress best-team-value="[[objective2.bestTeamValue]]"
-              actual-value="[[_actualValue(objective2.pastPeriods)]]"
-              best-team-name="[[objective2.bestTeamName]]"></objective-progress>
-          </td>
-          <td>
-            [[_actualValue(objective2.pastPeriods)]] [[objective2.unit]]
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <google-chart class="spark"
-              type="line"
-              data="[[objective3.pastPeriods]]"
-              options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
-            </google-chart>
-          </td>
-          <td>[[objective3.name]]</td>
-          <td>
-            <objective-progress best-team-value="[[objective3.bestTeamValue]]"
-              actual-value="[[_actualValue(objective3.pastPeriods)]]"
-              best-team-name="[[objective3.bestTeamName]]"></objective-progress>
-          </td>
-          <td>
-            [[_actualValue(objective3.pastPeriods)]] [[objective3.unit]]
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <div style="width: 100%; height: 100%;" hidden$="{{!dataAvailable}}">
+      <div class="headerContainer">
+        <h3 class="caption">Ziele</h3>
+        <div class="alignRight">
+          <span>
+            (
+            <div class="legend" style="background-color: #3367d6;"></div>
+            Aktuell;
+            <div class="legend" style="background-color: #152c5c;"></div>
+            Bester Mitspieler;)
+          </span>
+          <iron-icon class="alignRight" icon="icons:zoom-in"></iron-icon>
+        </div>
+      </div>
+      <h3>Gesamtplatzierung: [[ranking]]</h3>
+      <table>
+        <colgroup>
+           <col span="1" style="width: 30%;">
+           <col span="1" style="width: 25%;">
+           <col span="1" style="width: 30%;">
+           <col span="1" style="width: 15%;">
+        </colgroup>
+        <thead>
+          <tr>
+            <th>Vergangene 5 Perioden</th>
+            <th>Ziel</th>
+            <th>Fortschritt</th>
+            <th>Aktuell</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <google-chart class="spark"
+                type="line"
+                data="[[objective1.pastPeriods]]"
+                options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
+              </google-chart>
+            </td>
+            <td>[[objective1.name]]</td>
+            <td>
+              <objective-progress best-team-value="[[objective1.bestTeamValue]]"
+                actual-value="[[_actualValue(objective1.pastPeriods)]]"
+                best-team-name="[[objective1.bestTeamName]]"></objective-progress>
+            </td>
+            <td>
+              [[_actualValue(objective1.pastPeriods)]] [[objective1.unit]]
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <google-chart class="spark"
+                type="line"
+                data="[[objective2.pastPeriods]]"
+                options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
+              </google-chart>
+            </td>
+            <td>[[objective2.name]]</td>
+            <td>
+              <objective-progress best-team-value="[[objective2.bestTeamValue]]"
+                actual-value="[[_actualValue(objective2.pastPeriods)]]"
+                best-team-name="[[objective2.bestTeamName]]"></objective-progress>
+            </td>
+            <td>
+              [[_actualValue(objective2.pastPeriods)]] [[objective2.unit]]
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <google-chart class="spark"
+                type="line"
+                data="[[objective3.pastPeriods]]"
+                options='{"backgroundColor": {"fill": "transparent"}, "legend": {"position": "none"}, "hAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"},"vAxis": {"baselineColor": "none","ticks": [],"textPosition": "none"}}'>
+              </google-chart>
+            </td>
+            <td>[[objective3.name]]</td>
+            <td>
+              <objective-progress best-team-value="[[objective3.bestTeamValue]]"
+                actual-value="[[_actualValue(objective3.pastPeriods)]]"
+                best-team-name="[[objective3.bestTeamName]]"></objective-progress>
+            </td>
+            <td>
+              [[_actualValue(objective3.pastPeriods)]] [[objective3.unit]]
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </template>
 
   <script>
@@ -156,6 +168,10 @@ tile with key metrics
         },
         objective3: {
           type: Object
+        },
+        dataAvailable: {
+          type: Boolean,
+          value: false
         }
       },
       ready: function() {
@@ -167,9 +183,11 @@ tile with key metrics
       },
       handleResponse: function(e) {
         this._processData(e.detail.response);
+        this.dataAvailable = true;
       },
       handleError: function() {
         console.warn("No Data");
+        this.dataAvailable = false;
       },
       _processData: function(objData) {
         this.ranking = objData.ranking;
