--- a/demo/klima-dashboard-page-demo.html
+++ b/demo/klima-dashboard-page-demo.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="height: 100%">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
@@ -12,7 +12,7 @@
     <style>
     </style>
   </head>
-  <body>
+  <body style="height: 100%">
     <klima-dashboard-page></klima-dashboard-page>
   </body>
 </html>
