--- a/demo/index.html
+++ b/demo/index.html
@@ -26,7 +26,7 @@
       <demo-snippet>
         <template>
           <div style="height: 100%; width: 100%">
-          <klima-dashboard border-width="4" class="dashboards" responsible="true">
+          <klima-dashboard border-width="4" class="dashboards" responsive="true">
             <!-- A -->
             <!-- <klima-dashboard-tile style="background-color: red;" row="1" overlap="1" positions="[1,1]" width="50">A</klima-dashboard-tile>
             <klima-dashboard-tile style="background-color: blue;" row="1" positions="[2]" width="25">B</klima-dashboard-tile>
