--- a/klima-dashboard-page.html
+++ b/klima-dashboard-page.html
@@ -28,7 +28,7 @@ dashboard page
         background-color: #EEEEEE;
       }
     </style>
-    <klima-dashboard border-width="4" id="dashboard" responsible>
+    <klima-dashboard border-width="4" id="dashboard" responsive>
       <klima-dashboard-tile class="tile" row="1" positions="[1]">
         <key-metrics-tile source-url="http://127.0.0.1:8081/json/dashboard/keyMetrics.json"></key-metrics-tile>
       </klima-dashboard-tile>
