--- a/klima-dashboard.html
+++ b/klima-dashboard.html
@@ -49,7 +49,7 @@ dashboard
           type: String,
           value: '#3F51B5'
         },
-        responsible: {
+        responsive: {
           type: Boolean,
           value: false
         }
